--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://quizzical-hopper-f9c19d.netlify.app/";</script>
+<script type="text/javascript">window.location = "https://vigneshg.netlify.app/";</script>
